--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
 
-    <title>Ecommerce App</title>
+    <title>TrendiKart</title>
   </head>
   <body>
     <div id="root"></div>
